fix bug overflow

--- a/client/src/scss/components/_product-card.scss
+++ b/client/src/scss/components/_product-card.scss
@@ -1,6 +1,6 @@
 .p-product{
   img{
-    // object-fit: cover;
+    object-fit: cover;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -71,20 +71,20 @@
     &__images {
       position: relative;
       width: 100%;
-      height: 100%;
+      height: auto;
       @include flex-row;
       z-index: 1;
       bottom: 0;
       left: 0;
-      align-self: center;
-      transform: translateY(0%);
-      transform-origin: top;
+      transform: translateX(0%);
+      transform-origin: left;
       transition:transform 500ms ease-in-out;
+      aspect-ratio: 1/ 1;
       img{
+        width: 500px;
+        height: 100%;
+        object-fit: contain;
         aspect-ratio: 1/ 1;
-        object-fit: cover;
-        width: 100%;
-        height: auto;
         &:first-child{
           opacity: 1;
           visibility: visible;
